# VideoCaptureDemo

./: CMakeLists.txt  README.md
include/: README.md
src/: main.cpp
